# Brats-DB-Converter

./: CMakeLists.txt  README.md  generate_raw.cpp  main.cpp
Debug/: CMakeCache.txt  DBGenerator.cbp  Makefile  cmake_install.cmake
